--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
             <img src="./images/alexander-klimm-AutwoTgUeVE-unsplash.jpg" class="gallery__photo">
             <p class="author">Alexader Klim</p>
         </div>
-        
-        <!-- <div class="gallery__card sixth">
+        <div class="gallery__card sixth">
             <img src="./images/aleksandra-sapozhnikova-K9cCqYhmodk-unsplash.jpg" class="gallery__photo">
             <p class="author">Aleksandra Sapozhnikova</p>
             <p class="gallery__card-description">3 объекта всемирного наследия ЮНЕСКО</p>
@@ -90,7 +89,7 @@
             <p class="author">Nick Night</p>
             <p class="gallery__card-description">Сезонный перепад температур - почти 100 градусов по Цельсию.
                 Зимой температура может опускаться до -55, а летом подниматься до 42 градусов.</p>
-        </div> -->
+        </div>
         
     </main>
 
